--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                 <h3 class="text-uppercase font-weight-normal text-white m-0" style="letter-spacing: 2px;">clik para ver video, despues le pone ver video en youtube</h3>
                             </div>
                             <button type="button" class="btn-play mx-auto" data-toggle="modal"
-                                data-src="https://www.youtube.com/embed/Plh2cMc-Ypc?si=jlqbSTd3rvQQbMST" data-target="#videoModal">
+                                data-src="https://www.youtube.com/embed/5YDAAYFVm_U?si=2ynN5DaYs4IOM0XD" data-target="#videoModal">
                                 <span></span>
                             </button>
                         </div>
@@ -170,8 +170,21 @@
     </div>
     <!-- About End -->
 
-
-    <!-- Story Start -->
+    <div class="container py-5" id="pdf-section">
+    <div class="section-title text-center mb-4">
+        <h2 class="font-secondary">Visualiza los archivos PDF</h2>
+        <p>Haz clic en los siguientes enlaces para abrir los documentos:</p>
+    </div>
+    <div class="text-center">
+        <a href="pdfs/Archivo1.pdf" target="_blank" class="btn btn-outline-primary m-2">
+            Ver PDF 1
+        </a>
+        <a href="pdfs/Archivo2.pdf" target="_blank" class="btn btn-outline-secondary m-2">
+            Ver PDF 2
+        </a>
+    </div>
+</div>
+    <!-- Story Start 1111111111-->
     <div class="container-fluid py-5" id="story">
         <div class="container pt-5 pb-3">
             <div class="section-title position-relative text-center">
@@ -221,16 +234,56 @@ MUL</p>
                         </div>
                     </div>
                 </div>
+        </div>
+    </div>
+    <!-- Story End -->
+
+     <!-- Story Start 222222222222222222 -->
+    <div class="container-fluid py-5" id="story">
+        <div class="container pt-5 pb-3">
+            <div class="section-title position-relative text-center">
+                <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">00</h6>
+                <h1 class="font-secondary display-4">Analizador léxico.</h1>
+                <i class="far fa-heart text-dark"></i>
+            </div>
+            <div class="container timeline position-relative p-0">
+                <div class="row">
+                    <div class="col-md-6 text-center text-md-right">
+                        <img class="img-fluid mr-md-3" src="img/foto=9.png" alt="">
+                    </div>
+                    <div class="col-md-6 text-center text-md-left">
+                        <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-4 ml-md-3">
+                            <h4 class="mb-2">Analizador lexico</h4>
+                            <p class="text-uppercase mb-2">01</p>
+                            <p class="m-0">Se encarga de buscar los componentes léxicos o palabras que componen el programa fuente, según unas reglas o patrones. La entrada del analizador léxico podemos definirla como una secuencia de caracteres.</p>
+                        </div>
+                    </div>
+                </div>
                 <div class="row">
                     <div class="col-md-6 text-center text-md-right">
                         <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-4 mr-md-3">
-                            <h4 class="mb-2">Propiedades del Código Intermedio</h4>
-                            <p class="text-uppercase mb-2">04</p>
-                            <p class="m-0">Independencia de la Máquina: Es una de sus propiedades más importantes, ya que permite que el mismo código intermedio sea traducido a diferentes arquitecturas de máquina. 
-Facilidad de Producción y Optimización.</p>
+                            <h4 class="mb-2">Funciones del Analizador Léxico</h4>
+                            <p class="text-uppercase mb-2">02</p>
+                            <p class="m-0">Para reconocer el token usa un patrón, una regla que describe como se forman las cadenas que corresponden a un token.
+Salta comentarios y espacios en blanco (tabuladores, saltos de línea...) 
+Tener el registro de la línea del archivo fuente que está siendo analizada
+Genera mensajes de error léxico, y se recupera del error </p>
+                        </div>
                     </div>
                     <div class="col-md-6 text-center text-md-left">
-                        <img class="img-fluid ml-md-3" src="img/foto-8.jpeg" alt="">
+                        <img class="img-fluid ml-md-3" src="img/foto-10.jpg" alt="">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6 text-center text-md-right">
+                        <img class="img-fluid mr-md-3" src="img/foto-11.jpg" alt="">
+                    </div>
+                    <div class="col-md-6 text-center text-md-left">
+                        <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-4 ml-md-3">
+                            <h4 class="mb-2">nota</h4>
+                            <p class="text-uppercase mb-2">03</p> Se compone de un conjunto de rutinas independientes, llamadas por los analizadores morfológico y sintáctico.
+El análisis semántico utiliza como entrada el árbol sintáctico detectado por el análisis sintáctico para comprobar restricciones de tipo y otras limitaciones semánticas y preparar la generación de código.</p>
+                        </div>
                     </div>
                 </div>
             </div>
