--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
                         <div class="p-3" style="max-width: 900px;">
                             <h1 class="display-1 font-secondary text-white mt-n3 mb-md-4">Lenguajes y automatas 2</h1>
                             <div class="d-inline-block border-top border-bottom border-light py-3 px-4">
-                                <h3 class="text-uppercase font-weight-normal text-white m-0" style="letter-spacing: 2px;">clik para ver video, despues le pone ver video en youtube</h3>
+                                <h3 class="text-uppercase font-weight-normal text-white m-0" style="letter-spacing: 2px;">Leda en abre el ducumento directamente, hermosa maestra, este es el video de la U3</h3>
                             </div>
                             <button type="button" class="btn-play mx-auto" data-toggle="modal"
-                                data-src="https://www.youtube.com/embed/5YDAAYFVm_U?si=2ynN5DaYs4IOM0XD" data-target="#videoModal">
+                                data-src="https://drive.google.com/file/d/1UB3kAUMIEmsk_FzBamHeNMBw4-38Vrvo/view?usp=drive_link" data-target="#videoModal">
                                 <span></span>
                             </button>
                         </div>
